# licmon-backend

./: .env  .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  app.py  licmon.cfg.example  licmon.py  pyproject.toml  servers.cfg.example  setup.cfg  test.txt  test_modified.txt  uwsgi.ini
app/: __init__.py
app/main/: __init__.py  config.py  wsgi.py
app/main/controller/: api.py  auth.py  product_controller.py
app/main/core/: app.py  auth.py  limiter.py  marshmallow.py  notifications.py
app/main/model/: feature.py  license.py  product.py  server.py  user.py
app/main/schemas/: feature.py  license.py  product.py  server.py  user.py
app/main/service/: feature.py  product.py  product_service.py  server.py
app/main/util/: __init__.py  dto.py  lmutil.py
app/main/utils/: dto.py
licmon/: config.py  licmon.cfg.example  wsgi.py
licmon/controller/: api.py  auth.py
licmon/core/: app.py  auth.py  limiter.py  notifications.py
licmon/model/: license.py  server.py
licmon/schemas/: license.py  product.py  server.py
licmon/service/: feature.py  product.py  server.py
licmon/templates/: base_email.html
templates/: base_email.html  base_email.txt  login_esponse.html  release_email.html  release_email.txt
