[metadata]
name = licmon
version = 0.8
license = MIT
description = Open Source Web License Manager for FlexNet.
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=CommonMark
author = Esteban Puentes
author_email = esteban.puentes@cern.ch
url = https://github.com/VirtualEvan/licmon-backend

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >= 3.8
setup_requires =
    wheel
install_requires =
    Authlib==0.15.2
    flask-marshmallow==0.14.0
    Flask==1.1.2
    Flask-Limiter==1.4
    itsdangerous==1.1.0
    Jinja2==2.11.2
    marshmallow==3.10.0
    python-dotenv==0.15.0
    pytz==2020.4
    regex==2020.11.13
    requests==2.25.1
    webargs==7.0.1
    Werkzeug==1.0.1

[options.extras_require]
dev =
    black>=20.8b1
    flake8
    flake8-quotes
    flask-shell-ipython
    ipython
    isort>=5.6.4
    pytest
    pytest-mock
    pytest-cov
    pytest-snapshot




[flake8]
exclude=__pycache__
max-line-length=89

inline-quotes = single
multiline-quotes = single
docstring-quotes = double
avoid-escape = true

per-file-ignores =
    app/main/vendor/django_mail/message.py:E741
    app/main/vendor/django_mail/**/*.py:Q
